--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "electron": ">=12.0.0"
   },
   "dependencies": {
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "electron-log": "^5.4.3"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^29.0.0",
