--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "rollup -c -w",
     "build:vite": "vite build",
     "dev:vite": "vite build --watch",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "docs": "typedoc"
   },
   "files": [
     "dist"
@@ -19,8 +20,8 @@
     "electron": ">=12.0.0"
   },
   "dependencies": {
-    "uuid": "^9.0.0",
-    "electron-log": "^5.4.3"
+    "electron-log": "^5.4.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^29.0.0",
@@ -32,6 +33,8 @@
     "rollup": "^4.53.3",
     "rollup-plugin-dts": "^6.3.0",
     "tslib": "^2.8.1",
+    "typedoc": "^0.28.15",
+    "typedoc-plugin-markdown": "^4.9.0",
     "typescript": "^5.0.0",
     "vite": "^4.0.0",
     "vite-plugin-dts": "^3.0.0"
